logs/metafunctions.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ansicolors-1.1.8.dist-info'...
Listing './lib/python3.5/site-packages/colors'...
Listing './lib/python3.5/site-packages/metafunctions'...
Compiling './lib/python3.5/site-packages/metafunctions/api.py'...
***   File "./lib/python3.5/site-packages/metafunctions/api.py", line 58
    @node(name=f'star{fname}' if fname.startswith('(') else f'star({fname})')
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/metafunctions/core'...
Compiling './lib/python3.5/site-packages/metafunctions/core/base.py'...
***   File "./lib/python3.5/site-packages/metafunctions/core/base.py", line 32
    return f'({f" {self._function_join_str} ".join(str(f) for f in self.functions)})'
                                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/core/concurrent.py'...
***   File "./lib/python3.5/site-packages/metafunctions/core/concurrent.py", line 26
    raise exceptions.CompositionError(f'{type(self)} can only upgrade FunctionMerges')
                                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/exceptions.py'...
***   File "./lib/python3.5/site-packages/metafunctions/exceptions.py", line 19
    f"location='{self.location}'" if self.location else '')
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/map.py'...
***   File "./lib/python3.5/site-packages/metafunctions/map.py", line 34
    return f'mmap({self.functions[0]!s})'
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/metafunctions/tests'...
Compiling './lib/python3.5/site-packages/metafunctions/tests/test_at_operator.py'...
***   File "./lib/python3.5/site-packages/metafunctions/tests/test_at_operator.py", line 22
    f"FunctionChain{(a, cmp.functions[1])}")
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/tests/test_concurrent.py'...
***   File "./lib/python3.5/site-packages/metafunctions/tests/test_concurrent.py", line 41
    f'Caught exception in child process \n\nOccured in the following function: '
                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/tests/test_deferred_value.py'...
***   File "./lib/python3.5/site-packages/metafunctions/tests/test_deferred_value.py", line 15
    self.assertEqual(repr(b), f'DeferredValue({repr(a)})')
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/tests/test_function_chain.py'...
***   File "./lib/python3.5/site-packages/metafunctions/tests/test_function_chain.py", line 13
    self.assertEqual(repr(c), f'FunctionChain{(a,b,l)}')
                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/tests/test_function_merge.py'...
***   File "./lib/python3.5/site-packages/metafunctions/tests/test_function_merge.py", line 16
    self.assertEqual(repr(cmp), f'FunctionMerge({operator.add}, {(a, b)})')
                                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/tests/test_imports.py'...
***   File "./lib/python3.5/site-packages/metafunctions/tests/test_imports.py", line 11
    exec(f'from metafunctions import {name}')
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/tests/test_map.py'...
***   File "./lib/python3.5/site-packages/metafunctions/tests/test_map.py", line 43
    self.assertEqual(str(mapsum), f'mmap(sum)')
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/tests/test_pipe.py'...
***   File "./lib/python3.5/site-packages/metafunctions/tests/test_pipe.py", line 65
    f"(SimpleFunction({repr(a._function)}), DeferredValue('f')))")
    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/tests/test_simple_function.py'...
***   File "./lib/python3.5/site-packages/metafunctions/tests/test_simple_function.py", line 15
    self.assertEqual(repr(a), f'SimpleFunction({repr(a._function)})')
                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/tests/test_star.py'...
***   File "./lib/python3.5/site-packages/metafunctions/tests/test_star.py", line 46
    self.assertEqual(str(h), f'star({h._function.__closure__[0].cell_contents})')
                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/tests/test_util.py'...
***   File "./lib/python3.5/site-packages/metafunctions/tests/test_util.py", line 49
    self.assertEqual(util.color_highlights(s), f'a {colors.red("->test<-")} string {colors.red("->for<-")} highlight')
                                                                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/tests/util.py'...
***   File "./lib/python3.5/site-packages/metafunctions/tests/util.py", line 34
    return super()._formatMessage(msg=f'{msg} (seed: {self.seed})', standardMsg=standardMsg)
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metafunctions/util.py'...
***   File "./lib/python3.5/site-packages/metafunctions/util.py", line 40
    regex = f"((?:.*?{escaped}.*?){{{occurance_index-1}}}.*?){escaped}(.*$)"
                                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/metafunctions-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
